--- a/switch.css
+++ b/switch.css
@@ -1,1 +1,5 @@
-body,*{background:black;position-absolute;rotate(34deg)}
+body,*{background:black;position-absolute;transform:rotate(34deg)};
+
+*{
+  width:10%;
+}
